maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall(): Boolean = {
  gauche();
  if (estFaceMur){
    droite();
    return true
  }
  else{
    droite();
    return false
  }
}


override def run() {
  while (!estSurBiscuit){
    if (keepHandOnTheWall == true){
      if (!estFaceMur){
        avance();
      }
      else{
        droite();
      }
    }
    else {
      gauche();
    }
  }
}